--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
     "props-type": "^1.0.1",
+    "query-string": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
