--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "bootstrap": "^4.1.1",
     "es6": "^0.0.7",
     "font-awesome": "^4.7.0",
+    "joi-browser": "13.4",
     "lodash": "^4.17.10",
     "props-type": "^1.0.1",
     "query-string": "^6.1.0",
@@ -17,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^4.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
